markdownifying, formatting, etc. and so on
eliminating non-meaningful inconsistencies is going to be an insane task

--- a/markdown/9-21-2011.md
+++ b/markdown/9-21-2011.md
@@ -16,7 +16,9 @@ Each member of the Board of Trustees shall be at least eighteen (18) years of ag
 
 ### Section 1.04. Election of Trustees
 
-Trustees shall be elected at annual meetings of the Board. Each Trustee shall serve a term of four (4) years. For the purpose of staggering their terms of office, the Trustees shall be divided into four (4) classes, as nearly equal in number as may be, and the term of office of each class shall expire each year in regular rotation. At least one (1) member of each class shall be elected from the alumni and alumnae of the Corporation, and one (1) such member shall be known as an Alumnus Trustee or Alumna Trustee. In addition, effective July 1, 2012 the President of the Corporation&apos;s Alumni Association shall serve as a voting member of the Board of Trustees for such time as he or she shall continue to serve as President of the Alumni Association, but in no event for a term of longer than four (4) years. Elections to the Board shall be by ballot and shall require the vote of at least a majority of the members of the Board in office at the time of the election.Vacancies on the Board resulting from any cause whatsoever (including without limitation an increase in the number of authorized Trustees or the resignation of a Trustee) may be filled for the duration of the unexpired term by the Board of Trustees at any meeting thereof, provided that the notice of such election, shall have been given and entered in the minutes of at least one (1) preceding regular meeting of the Board, stating the meeting at which such election shall be held. At the annual meeting in 2001 and thereafter, no Trustee shall be elected for more than three (3) consecutive full terms, provided that terms of office commencing prior to the annual meeting in 2001 shall not be counted in applying such limitation.
+Trustees shall be elected at annual meetings of the Board. Each Trustee shall serve a term of four (4) years. For the purpose of staggering their terms of office, the Trustees shall be divided into four (4) classes, as nearly equal in number as may be, and the term of office of each class shall expire each year in regular rotation. At least one (1) member of each class shall be elected from the alumni and alumnae of the Corporation, and one (1) such member shall be known as an Alumnus Trustee or Alumna Trustee. In addition, effective July 1, 2012 the President of the Corporation&apos;s Alumni Association shall serve as a voting member of the Board of Trustees for such time as he or she shall continue to serve as President of the Alumni Association, but in no event for a term of longer than four (4) years. 
+
+Elections to the Board shall be by ballot and shall require the vote of at least a majority of the members of the Board in office at the time of the election.Vacancies on the Board resulting from any cause whatsoever (including without limitation an increase in the number of authorized Trustees or the resignation of a Trustee) may be filled for the duration of the unexpired term by the Board of Trustees at any meeting thereof, provided that the notice of such election, shall have been given and entered in the minutes of at least one (1) preceding regular meeting of the Board, stating the meeting at which such election shall be held. At the annual meeting in 2001 and thereafter, no Trustee shall be elected for more than three (3) consecutive full terms, provided that terms of office commencing prior to the annual meeting in 2001 shall not be counted in applying such limitation.
 
 ### Section 1.05. Annual and Regular Meetings
 
