markdown'd every version except the insane "blackline" diff

--- a/markdown/2011-9-21.md
+++ b/markdown/2011-9-21.md
@@ -1,4 +1,4 @@
-# The Cooper Union for the Advancement of Science and Art Bylaws as Adopted May 12, 1972 and as Amended through September 21, 2011
+# The Cooper Union for the Advancement of Science and Art Bylaws as adopted May 12, 1972 and as amended through September 21, 2011
 
 ## Article I: Board of Trustees
 
@@ -16,9 +16,9 @@ Each member of the Board of Trustees shall be at least eighteen (18) years of ag
 
 ### Section 1.04. Election of Trustees
 
-Trustees shall be elected at annual meetings of the Board. Each Trustee shall serve a term of four (4) years. For the purpose of staggering their terms of office, the Trustees shall be divided into four (4) classes, as nearly equal in number as may be, and the term of office of each class shall expire each year in regular rotation. At least one (1) member of each class shall be elected from the alumni and alumnae of the Corporation, and one (1) such member shall be known as an Alumnus Trustee or Alumna Trustee. In addition, effective July 1, 2012 the President of the Corporation&apos;s Alumni Association shall serve as a voting member of the Board of Trustees for such time as he or she shall continue to serve as President of the Alumni Association, but in no event for a term of longer than four (4) years. 
+Trustees shall be elected at annual meetings of the Board. Each Trustee shall serve a term of four (4) years. For the purpose of staggering their terms of office, the Trustees shall be divided into four (4) classes, as nearly equal in number as may be, and the term of office of each class shall expire each year in regular rotation. At least one (1) member of each class shall be elected from the alumni and alumnae of the Corporation, and one (1) such member shall be known as an Alumnus Trustee or Alumna Trustee. In addition, effective July 1, 2012 the President of the Corporation&apos;s Alumni Association shall serve as a voting member of the Board of Trustees for such time as he or she shall continue to serve as President of the Alumni Association, but in no event for a term of longer than four (4) years.
 
-Elections to the Board shall be by ballot and shall require the vote of at least a majority of the members of the Board in office at the time of the election.Vacancies on the Board resulting from any cause whatsoever (including without limitation an increase in the number of authorized Trustees or the resignation of a Trustee) may be filled for the duration of the unexpired term by the Board of Trustees at any meeting thereof, provided that the notice of such election, shall have been given and entered in the minutes of at least one (1) preceding regular meeting of the Board, stating the meeting at which such election shall be held. At the annual meeting in 2001 and thereafter, no Trustee shall be elected for more than three (3) consecutive full terms, provided that terms of office commencing prior to the annual meeting in 2001 shall not be counted in applying such limitation.
+Elections to the Board shall be by ballot and shall require the vote of at least a majority of the members of the Board in office at the time of the election. Vacancies on the Board resulting from any cause whatsoever (including without limitation an increase in the number of authorized Trustees or the resignation of a Trustee) may be filled for the duration of the unexpired term by the Board of Trustees at any meeting thereof, provided that the notice of such election, shall have been given and entered in the minutes of at least one (1) preceding regular meeting of the Board, stating the meeting at which such election shall be held. At the annual meeting in 2001 and thereafter, no Trustee shall be elected for more than three (3) consecutive full terms, provided that terms of office commencing prior to the annual meeting in 2001 shall not be counted in applying such limitation.
 
 ### Section 1.05. Annual and Regular Meetings
 
@@ -68,49 +68,49 @@ Persons whom the Board of Trustees wishes to recognize for their service and all
 
 ### Section 2.01. Executive Committee
 
-The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish an Executive Committee consisting of the Chair of the Board of Trustees, who shall be Chair of the Committee, and six (6) Trustees or such other number as shall be specified in such resolution. The Executive Committee shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected.Vacancies on the Executive Committee occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
+The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish an Executive Committee consisting of the Chair of the Board of Trustees, who shall be Chair of the Committee, and six (6) Trustees or such other number as shall be specified in such resolution. The Executive Committee shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected. Vacancies on the Executive Committee occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
 
 The Executive Committee shall have and may exercise all the powers of the Board (except the power to fill vacancies on the Board or on any committee, to amend or repeal these Bylaws, and to remove any Trustee or officer from office) when the Board is not in session. The Executive Committee shall establish its own rules and procedures, and its meeting shall be held at such times and places as it may determine. A majority of the members of the Executive Committee then in office shall constitute a quorum for the transaction of business.
 
 ### Section 2.02. Investment Committee
 
-The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish an Investment Committee consisting of three (3) members, at least three (3) of whom shall be members of the Board, or such other number of members as shall be specified in such resolution, provided that a majority of the members of the Committee shall be members of the Board. The Investment Committee shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected.Vacancies on the Investment Committee occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
+The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish an Investment Committee consisting of three (3) members, at least three (3) of whom shall be members of the Board, or such other number of members as shall be specified in such resolution, provided that a majority of the members of the Committee shall be members of the Board. The Investment Committee shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected. Vacancies on the Investment Committee occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
 
 The Investment Committee shall advise the Board with regard to the investment policies of the Corporation, provide oversight of investment decisions, periodically review the investments of the Corporation and report to the Board with regard to their performance.
 
 ### Section 2.03. Committee on Trustees
 
-The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish a Committee on Trustees consisting of five (5) Trustees, or such other number of members as shall be specified in such resolution, provided that a majority of the members of the Committee shall be members of the Board. The Committee on Trustees shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected. No Trustee who is in the last year of his or her term shall be eligible for membership on such Committee.Vacancies in the Committee on Trustees occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
+The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish a Committee on Trustees consisting of five (5) Trustees, or such other number of members as shall be specified in such resolution, provided that a majority of the members of the Committee shall be members of the Board. The Committee on Trustees shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected. No Trustee who is in the last year of his or her term shall be eligible for membership on such Committee. Vacancies in the Committee on Trustees occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
 
 The Committee on Trustees shall identify candidates for election as (i) Members of the Board of Trustees, (ii) Trustee members of committees of the Corporation, and (iii) Officers of the Corporation. The Committee on Trustees shall also (i) Review and assess the composition of the Board and the need for new Board members (ii) Plan and participate in the orientation of new members of the Board (iii) Periodically evaluate the performance of the Board and its members, and (iv) Perform such other duties as the Board shall determine.
 
 ### Section 2.04. Audit Committee
 
-The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish an Audit Committee consisting of five (5) Trustees, or such other number of members as shall be specified in such resolution, provided that a majority of the members of the Committee shall be members of the Board. The Audit Committee shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected.Vacancies in the Audit Committee occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
+The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish an Audit Committee consisting of five (5) Trustees, or such other number of members as shall be specified in such resolution, provided that a majority of the members of the Committee shall be members of the Board. The Audit Committee shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected. Vacancies in the Audit Committee occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
 
 The Audit Committee shall (i) Be directly responsible for the appointment, compensation, oversight and termination of the work of any independent auditor employed by the Company, (ii) Pre-approve all auditing services and non-audit services, including tax services, (iii) Annually obtain and review with the lead audit partner a report by the independent auditor, (iv) Oversee any other aspect of risk assessment and management and (v) Ensure that accurate and complete financial records are maintained.
 
 ### Section 2.05. Finance and Business Affairs Committee
 
-The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish a Finance Committee consisting of five (5) Trustees, or such other number of members as shall be specified in such resolution, provided that a majority of the members of the Committee shall be members of the Board. The Finance Committee shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected.Vacancies on the Finance Committee occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
+The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish a Finance Committee consisting of five (5) Trustees, or such other number of members as shall be specified in such resolution, provided that a majority of the members of the Committee shall be members of the Board. The Finance Committee shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected. Vacancies on the Finance Committee occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
 
 The Finance Committee shall (i) Review the Corporation&apos;s financial operations, (ii) Oversee the Corporation&apos;s annual operating and capital budgets, (iii) Perform such other duties relating to the Corporation&apos;s finances as the Board shall determine, (iv) Oversee of major capital projects, (v) Review proposed annual budgets and making recommendations to the full Board, (vi) Review periodic financial management reports and (vii) Review of administrative functions, including labor relations.
 
 ### Section 2.06 Committee on Academic and Student Affairs
 
-The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish a Committee on Academic and Student Affairs consisting of five (5) members, at least three (3) of whom shall be members of the Board, or such other number of members as shall be specified in such resolution, provided that a majority of the members of the Committee shall be members of the Board. The Committee on Academic and Student Affairs shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected.Vacancies on the Committee on Academic and Student Affairs occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
+The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish a Committee on Academic and Student Affairs consisting of five (5) members, at least three (3) of whom shall be members of the Board, or such other number of members as shall be specified in such resolution, provided that a majority of the members of the Committee shall be members of the Board. The Committee on Academic and Student Affairs shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected. Vacancies on the Committee on Academic and Student Affairs occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
 
 The Committee on Academic and Student Affairs shall (i) review and report to the Board with regard to the academic affairs of the Corporation and (ii) perform such other duties relating to the academic and student affairs of the Corporation as the Board shall determine.
 
 ### Section 2.07. Development Committee
 
-The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish a Development Committee consisting of five (5) members, at least three (3) of whom shall be members of the Board, or such other number of members as shall be specified in such resolution, provided that a majority of the members of the Committee shall be members of the Board. The Development Committee shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected.Vacancies on the Development Committee occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
+The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish a Development Committee consisting of five (5) members, at least three (3) of whom shall be members of the Board, or such other number of members as shall be specified in such resolution, provided that a majority of the members of the Committee shall be members of the Board. The Development Committee shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected. Vacancies on the Development Committee occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
 
 The Development Committee shall: (i) Create an awareness of the importance of private giving, (ii) Promote a culture of giving among students, alumni and friends of the college, (iii) Set goals for trustee giving and actively engage in trustee solicitation, (iv) Set fund-raising goals and assess progress, (v) Participate in the development process, (vi) Examine trends and analyze implications for the future, and (vii) Establish fund-raising policies and (viii) Recommend annual development budgets.
 
 ### Section 2.08 Strategic Planning Committee
 
-The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish a Strategic Planning Committee consisting of five (5) members, at least three (3) of whom shall be members of the Board, or such other number of members as shall be specified in such resolution, provided that a majority of the members of the Committee shall be members of the Board. The Strategic Planning Committee shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected.Vacancies on the Strategic Planning Committee occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
+The Board of Trustees, by resolution adopted by a majority of the entire authorized number of members of the Board, shall establish a Strategic Planning Committee consisting of five (5) members, at least three (3) of whom shall be members of the Board, or such other number of members as shall be specified in such resolution, provided that a majority of the members of the Committee shall be members of the Board. The Strategic Planning Committee shall be established by the Board at the Annual meeting thereof, or at any adjournment thereof, and its members shall hold office for one (1) year and until their successors have been duly elected. Vacancies on the Strategic Planning Committee occurring from time to time may be filled by the Board at any meeting thereof by vote of a majority of the entire authorized number of members of the Board.
 
 The Strategic Planning Committee shall review and present to the Board for approval long range plans related to the (i) Academic goals, objectives and programs of study to be offered at the institution, (ii) Financial objectives of the institution including revenues, expenses and fund raising (iii) Long range investment strategies of the Corporation and (iv) Physical plant and space requirements for the institution.
 
